# mutualizo-api

./: .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
src/: config.py
src/api/: main.py  models.py
src/api/endpoints/: router.py
src/api/endpoints/v1/: average_words_length.py  matched_and_mismatched_words.py  ping.py  reverse_integers.py
src/api/services/: average_words_length.py  matched_and_mismatched_words.py  reverse_integers.py
src/api/services/tools/: utils.py
src/api/swagger_schemas/response_body/: ping-schema.json
src/models/: api_metadata.py
tests/: conftest.py
tests/e2e/: test_api.py
tests/unit/services/: test_average_words_length.py  test_matched_and_mismatched_words.py  test_reverse_integers.py
