[tool.poetry]
name = "mutualizo-api"
version = "1.0.0"
description = ""
authors = ["Marcus Cruz <marcus.v.s.c13@gmail.com>"]

[tool.poetry.dependencies]
fastapi = "^0.95.0"
python = "^3.10"
uvicorn = "^0.21.1"


[tool.poetry.group.dev.dependencies]
black = "23.3.0"
httpx = "^0.23.3"
mypy = "0.941"
pylint = "2.12.2"
pytest = "7.3.0"
pytest-asyncio = "^0.18.3"
pytest-cov = "^4.0.0"
pytest-icdiff = "^0.6"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.black]
line-length = 79
skip-string-normalization = true
exclude = '''
/(
      \.eggs
    | \.git
    | \.hg
    | \.mypy_cache
    | \.nox
    | \.tox
    | \.venv
    | \.svn
    | _build
    | buck-out
    | build
    | dist
    | .*venv.*
)/
'''

[tool.isort]
line_length = 79
profile = "black"

[tool.mypy]
allow_redefinition = false
check_untyped_defs = true
disallow_untyped_defs = true
ignore_errors = false
ignore_missing_imports = true
local_partial_types = true
no_implicit_optional = true
pretty = true
python_version = 3.10
show_error_codes = true
strict_optional = true
strict_equality = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_unused_configs = true
warn_unreachable = true
warn_no_return = true

[tool.pytest.ini_options]
asyncio_mode = "auto"